* Clean up gemspec and load paths [Steven Harman]
* Add Akismet is_test param [Steven Harman]
* Add Akismet user_role attribute [Steven Harman]
= 1.2.1
* Fix deprecated usage of HTTPResponse for Ruby 1.9.3 [Leonid Shevtsov]
= 1.2.0
* Rakismet attribute mappings are now inheritable
= 1.1.2
* Explicitly load version
= 1.1.1
* Fix SafeBuffer error under Rails 3.0.8 and 3.0.9 [Brandon Ferguson]
* Readme cleanup [Zeke Sikelianos]
* Drop Jeweler in favor of Bundler's gem tasks
= 1.1.0
* Add HTTP Proxy support [Francisco Trindade]
= 1.0.1
* Fix hash access for Ruby 1.9 [Alex Crichton]
= 1.0.0
* Update for Rails 3
* Remove filters and replace with middleware
* Remove initializers and replace with Railtie
= 0.4.0
* Rakismet is no longer injected into ActiveRecord or ActionController
* API changes to support newly decoupled modules
* Use Jeweler to manage gemspec
= 0.3.6
* Allow attributes to fall through to methods or AR attributes
= 0.3.5
* Added gemspec and rails/init.rb so rakismet can work as a gem [Michael Air]
* Added generator template and manifest [Michael Air]
= 0.3.0
* Abstract out Rakismet version string
* Set default Akismet Host
* Abstract out the Akismet host [Mike Burns]
* Started keeping a changelog :P